--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <% if (locals.questions) { %> console.log(questions);
+    <% if (locals.questions) { %>
     <div>
       <% questions.forEach(question => { %>
       <h4><%= question.title %></h4>
